Better fix for problem that some fields were too close to the tab strip. The previous fix broke other things.

--- a/FrontEnd/Modules/Base/Css/masterpage.css
+++ b/FrontEnd/Modules/Base/Css/masterpage.css
@@ -779,10 +779,10 @@ dd {
 	position: relative;
 	width: 100%;
 	z-index: 10;
+	margin-top: 5px;
 }
 .item[data-label-style="float"] h4 + * {
 	width: 100%;
-	margin-top: 5px;
 }
 .item[data-label-style="float"] h4 .property-name {
 	left: 10px;
@@ -1257,7 +1257,6 @@ footer input ~ .meta-data li.meta-toggle label span:last-child {
 .k-window-content > .pane-content .k-tabstrip .k-content.k-state-active,
 .k-window-content > .pane-content .k-tabstrip .dynamicTabContent {
 	height: auto;
-	padding-top: 5px;
 }
 
 .k-window-content > .pane-content .k-tabstrip .dynamicTabContent .gridview:last-child:nth-child(2),
